:constrution: main page styling spacing bug stil present

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -223,11 +223,8 @@ body,
 
 #search {
     width: 200px;
-    font-size: 20px;
+    font-size: 15px;
 }
-
-
-
 
 
 
